--- a/style.css
+++ b/style.css
@@ -3,3 +3,88 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+
+    border: 1px solid red;
+    padding: 10px 20px;
+}
+
+.hero-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.hero-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.hero-text {
+    width: 400px;
+}
+
+.hero img {
+    min-width: 400px;
+    min-height: 200px;
+    border: 1px solid red;
+}
+
+.info .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-items {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    gap: 30px;
+}
+
+.info-item {
+    width: 150px;
+    height: 200px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-item img {
+    width: 100%;
+    aspect-ratio: 1/1;
+    
+    border-radius: 10px;
+    border: 1px solid red;
+}
+
+.quote .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.quote-author {
+    align-self: flex-end;
+}
+
+.footer .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+}
