--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@
     margin: 0;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+.hero {
+    background-color: #1f2937;
+}
+
+.hero-header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem 0;
+}
+
+.hero-header-logo {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.hero-header-links {
+    display: flex;
+    gap: 1rem;
+}
+
+.hero-header-links a {
+    text-decoration: none;
+    color: #f9faf8;
+    font-size: 18px;
+    font-weight: lighter;
+}
