--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+/* Hero Section */
+
+/* Hero Header */
+
 .hero {
     background-color: #1f2937;
 }
@@ -31,7 +35,55 @@ body {
 
 .hero-header-links a {
     text-decoration: none;
-    color: #f9faf8;
+    color: #e5e7eb;
     font-size: 18px;
     font-weight: lighter;
+}
+
+/* Hero Content */
+
+.hero-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem 5rem;
+    gap: 2rem;
+}
+
+.hero-content-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    width: 40%;
+}
+
+.hero-content-text-title {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.hero-content-text-description {
+    font-size: 18px;
+    color: #e5e7eb;
+    font-weight: lighter;
+}
+
+.hero-content-text-button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem 2rem;
+    margin-top: 0.5rem;
+}
+
+.hero-content-image {
+    min-width: 400px;
+    min-height: 200px;
+    background-color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
