--- a/style.css
+++ b/style.css
@@ -87,3 +87,47 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+/* Info Section */
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    padding: 2rem 0rem 5rem 0rem;
+    gap: 2rem;
+}
+
+.info-title {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: bolder;
+}
+
+.info-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 2rem;
+    width: 60%;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    color: #1f2937;
+    font-weight: lighter;
+}
+
+.info-item img {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882f6;
+    border-radius: 10px;
+}
