--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     display: flex;
     flex-direction: column;
 }
@@ -95,7 +95,9 @@ main {
 .hero-content-image {
     width: 40%;
     aspect-ratio: 2/1;
-    background-color: #e5e7eb;
+    overflow: hidden;
+    border: 2px solid #3882f6;
+    border-radius: 10px;
 }
 
 /* Info Section */
@@ -137,6 +139,8 @@ main {
 .info-item img {
     width: 150px;
     height: 150px;
+    object-fit: cover;
+    object-position: center;
     border: 3px solid #3882f6;
     border-radius: 10px;
 }
@@ -166,7 +170,7 @@ main {
 /* Call to Action Section */
 
 .call-to-action {
-    width: 80%;
+    width: 70%;
     padding: 1.5rem 1.5rem;
     background-color: #3882f6;
     border-radius: 10px;
@@ -198,7 +202,6 @@ main {
 .call-to-action-button {
     background-color: #3882f6;
     color: #f9faf8;
-    border: none;
     border-radius: 5px;
     padding: 0.5rem 2rem;
     border: 1px solid #f9faf8;
